feat: Stripe test payment DONE

--- a/RPshop/server/public/success.html
+++ b/RPshop/server/public/success.html
@@ -11,6 +11,9 @@
     <p>
       We appreciate your business!
     </p>
+    <button>
+      <a href="http://localhost:4200">Continue Shopping</a>
+    </button>
   </section>
 </body>
 
